force-app/main/default/objects/Funding_Program__c/fields/De_identified_Sessions_Only__c.field-meta.xml
<CustomField>
    <fullName>De_identified_Sessions_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes that only sessions for de-identified or non-specific Participant(s) are delivered under this program</inlineHelpText>
    <label>De-identified Sessions Only</label>
    <type>Checkbox</type>
</CustomField>