force-app/main/default/objects/Funding_Program__c/fields/Funding_Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Target_Quantity__c</fullName>
    <inlineHelpText>Target quantity of delivered services per funding period</inlineHelpText>
    <label>Funding Target Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>