force-app/main/default/objects/Funding_Program__c/fields/Funding_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Funding_Target_Value__c</fullName>
    <inlineHelpText>Target value of delivered services per funding period</inlineHelpText>
    <label>Funding Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>