force-app/main/default/objects/Funding_Program__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Define the priority level for assigning delivered services to the defined Funding Program</inlineHelpText>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>