force-app/main/default/objects/Funding_Program__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Commencement date of the Program, anchors the creation and date ranges for related Program Periods</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>